<resources>
    <string name="app_id">379100872193576</string>
    <string name="app_name">Hellotracks</string>
	<string name="Hellotracks">Hellotracks</string>
	<string name="Slogan">Tracking as it should be!</string>
	<string name="PleaseCheckInternetConnection">Please check your Internet connection and try it later again.</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="trackingActive">Tracking is active</string>
	<string name="trackingInactive">Tracking is deactivated</string>
	<string name="trackingWaitingToBeConnected">Waiting for power connection</string>
	<string name="trackingActiveInMode">Tracking active |</string>
	<string name="invalidFormat">Invalid Format</string>
	<string name="unkownUser">Unknown User</string>
	<string name="passwordMismatch">Password Mismatch</string>
	<string name="unkownError">Unknown Error</string>
	<string name="login">Login</string>
	<string name="logout">Logout</string>
	<string name="register">Register</string>
	<string name="invalidEmail">Invalid Email</string>
	<string name="invalidPassword">Invalid Password. Password must contain at least 6 characters.
	</string>
	<string name="userAlreadyExists">User already exists</string>
	<string name="userRegisteredSuccessfully">User was registered successfully</string>
	<string name="Yes">Yes</string>
	<string name="No">No</string>
	<string name="Transport">Driving</string>
	<string name="enterUsernameAndPasswordToLogin">Enter your user name and password to login. If you do not have a username yet, you can register a new account for free.
	</string>
	<string name="registering">Registering</string>
	<string name="NewUser">New User</string>
	<string name="logoutText">Logout with this user?</string>
	<string name="NewPlace">Create Place</string>
	<string name="Locality">Locality</string>
	<string name="Company">Company</string>
	<string name="PlaceName">Name of place</string>
	<string name="Create">Create</string>
	<string name="CreatePlaceDesc">Create a new place and get notified whenever you arrive or leave this place.
	</string>
	<string name="InvalidPlaceName">Invalid Place Name</string>
	<string name="placeRegisteredSuccessfully">Place was created successfully</string>
	<string name="Share">Share</string>
	<string name="Cancel">Cancel</string>
	<string name="ShareHint">Enter your message here</string>
	<string name="Sharing">Sharing&#8230;</string>
	<string name="ContactEmail">contact@mail.com</string>
	<string name="CurrentLocationUnavailable">Current location unavailable.</string>
	<string name="CreateAnyhow">Create anyhow</string>
	<string name="ActivateFirst">You need to activate tracking first.</string>
	<string name="ActivateNow">Activate now</string>
	<string name="SendNow">Send now</string>
	<string name="FAQ">FAQ</string>
	<string name="MyTracks">My Tracks</string>
	<string name="Requesting">Requesting</string>
	<string name="Activities">Activities</string>
	<string name="Live">Live</string>
	<string name="Network">Network</string>
	<string name="InternetConnectionNeeded">Internet connection is currently not available</string>
	<string name="Email">Email</string>
	<string name="EmailsDoNotMatch">Email and Email Confirmation do not match.</string>
	<string name="Confirm">Confirm</string>
	<string name="ShareMessageDesc">Enter a message to share with your network. The message is related with you current position. Only people in your network do have
		access to your locations and messages.
	</string>
	<string name="RecommendDesc">Send an email invitation to a contact in order to share tracks, places and much more.</string>
	<string name="RequestException">Something did go wrong. Check Internet connection and please try again.
	</string>
	<string name="Messages">Messages</string>
	<string name="Feedback">Feedback</string>
	<string name="NoEntries">no entries</string>
	<string name="EnterMessage">Enter a message</string>
	<string name="Hello">Hello</string>
	<string name="SendMessage">Send message</string>
	<string name="ShowTracks">Show tracks</string>
	<string name="ChooseAction">Choose an action</string>
	<string name="FeedbackDesc">We are happy to get your feedback!</string>
	<string name="Reply">Reply</string>
	<string name="DeleteAccount">Delete User</string>
	<string name="PleaseGiveUsFeedbackWhyDelete">Please give us feedback why you are deleting your user.
	</string>
	<string name="ILikeItBut">I like your app, but what about adding&#8230;</string>
	<string name="Map">Map</string>
	<string name="ReallyDeleteAccount">Do you really want to delete this user permanently?</string>
	<string name="NoPermission">No permission</string>
	<string name="ShowInMap">Show in map</string>
	<string name="SeeNearby">See who is nearby</string>
	<string name="JumpTo">Jump to &#8230;</string>
	<string name="ShowAll">Show all</string>
	<string name="CloseMap">Close map</string>
	<string name="Start">Start</string>
	<string name="End">End</string>
	<string name="MapType">Map type</string>
	<string name="Satellite">Satellite</string>
	<string name="Phone">Phone</string>
	<string name="InvitationsDesc">You can accept or reject requests here.</string>
	<string name="Accept">Accept</string>
	<string name="Reject">Reject</string>
	<string name="InviteContact">Invite Contact</string>
	<string name="FromContactList">Select contact</string>
	<string name="InviteByEmail">Email address</string>
	<string name="SearchForPeople">Search for people</string>
	<string name="FindPeopleNearby">Find people nearby</string>
	<string name="FindPlacesNearby">Find places nearby</string>
	<string name="CreateNewPlace">Create new place</string>
	<string name="SMSRecommendation">I invite you to Hellotracks! Click here:  https://play.google.com/store/apps/details?id=com.hellotracks 
	</string>
	<string name="Name">Name</string>
	<string name="FirstAndLast">Your Name</string>
	<string name="InvalidName">Invalid Name</string>
	<string name="PleaseConfirmEmail">Please confirm\n\n%s\n\nas your valid and correct email address.
	</string>
	<string name="ChangeEmail">Change email</string>
	<string name="Find">Find people and places</string>
	<string name="FindDesc">People you might want to invite to your network.</string>
	<string name="SeeMessages">See all</string>
	<string name="Invite">Invite</string>
	<string name="Ignore">Ignore</string>
	<string name="Search">Search</string>
	<string name="EnterSearch">Enter person name or place</string>
	<string name="NameOrPlace">Name or place</string>
	<string name="PleaseEnterYourPhone">Please enter your phone number.</string>
	<string name="Later">Later</string>
	<string name="ThankYou">Thank You</string>
	<string name="PleaseEnterYourCompletePhoneNumber">Phone number is not entered correctly. Please enter your complete phone number.
	</string>
	<string name="CurrentlyNoMessagesAvailable">Currently no messages available.</string>
	<string name="CurrentlyNoTracksAvailable">Currently no tracks available. Next time your are on the way, activate tracking and you\'ll find all your tracks in this list.</string>
	<string name="ReadTerms">Read terms and conditions</string>
	<string name="AlreadyAcceptedTerms">Have you already read and accepted the terms and conditions?
	</string>
	<string name="YesLoginNow">Yes, sign in</string>
	<string name="NoReadNow">No, read first</string>
	<string name="CreatePlace">Create Place</string>
	<string name="DontShowAgain">OK, don\'t show again</string>
	<string name="PreloginToLogin">I already have an account on hellotracks</string>
	<string name="PreloginToRegister">I am new to hellotracks and want to start now</string>
	<string name="GPSInactive">Inactive GPS</string>
	<string name="ConnectPowerCable">Connect power cable</string>
	<string name="Autologin">Direct Login</string>
	<string name="AutologinDesc">Remember user and password and login directly?</string>
	<string name="Settings">Settings</string>
	<string name="OnAfterLogin">Activate Tracking</string>
	<string name="OnAfterLoginDesc">Automatically activate tracking upon login?</string>
	<string name="SendMsgDesc">To whom do you want to send a message?</string>
	<string name="NewMessage">New Message</string>
	<string name="UpdateNow">Update hellotracks now?</string>
	<string name="RateNow">Rate us :-)</string>
	<string name="StatusUpdate">Status Update</string>
	<string name="CouldNotOpenSMSApp">Could not open SMS application</string>
	<string name="PlacesYouMightAddToYourNetwork">Places you might want to add to your network.</string>
	<string name="TipsAndTricks">Tips and Tricks</string>
	<string name="NoGPSSignal">Waiting for GPS signal</string>
	<string name="Manual">Manual</string>
	<string name="Video">Video</string>
	<string name="GPSto">GPS to</string>
	<string name="Radius">Radius</string>
	<string name="DeleteMessage">Delete Message</string>
	<string name="TrackEnded">Tracking stopped</string>
	<string name="TrackStartedMeter">New track starts automatically on movement (min. 500m)</string>
	<string name="TrackStartedFeet">New track starts automatically on movement (min. 1700ft)</string>
	<string name="MessageWasEmpty">Empty message has not been sent</string>
	<string name="ForgotPassword">Forgot Password?</string>
	<string name="Members">Members</string>
	<string name="Tracks">Tracks</string>
	<string name="Location">Location</string>
	<string name="Contacts">Contacts</string>
	<string name="Places">Places</string>
	<string name="EditProfile">Edit Profile</string>
	<string name="EditProfileImage">Edit Profile Image</string>
	<string name="About">About</string>
	<string name="PublicProfile">Public Profile</string>
	<string name="PrivateProfile">Private Profile</string>
	<string name="Miles">Miles</string>
	<string name="KM">Kilometer</string>
	<string name="Format24h">24 hour</string>
	<string name="Format12h">12 hour (AM/PM)</string>
	<string name="TimeFormatDesc">Time format</string>
	<string name="DistanceDesc">Distance in</string>
	<string name="MinStandTimeDesc">Minimum standing time between two tracks</string>
	<string name="Stand5Min">5 min between tracks</string>
	<string name="Stand10Min">10 min between tracks</string>
	<string name="Stand30Min">30 min between tracks</string>
	<string name="Stand3Hrs">3 hrs between tracks</string>
	<string name="SignUp">Sign up</string>
	<string name="PhoneOptional">Phone (recommended)</string>
	<string name="PrivateUse">Free Private Use</string>
	<string name="BusinessUse">Try Business</string>
	<string name="BillingAddress">Billing Address</string>
	<string name="Address">Address</string>
	<string name="PostalCode">Postal Code</string>
	<string name="City">City</string>
	<string name="Country">Country</string>
	<string name="VATNumber">Registration Number (VAT)</string>
	<string name="OK">OK</string>
	<string name="Contact">Contact</string>
	<string name="CompanyNameOptional">Company name (optional)</string>
	<string name="Subject">Subject</string>
	<string name="Message">Message</string>
	<string name="Question">Question</string>
	<string name="HelpAndFAQ">Help &amp; FAQ</string>
	<string name="QuestionOrFeedback">Question / Feedback</string>
	<string name="InviteContactByEmail">Invite contact by email</string>
	<string name="InviteContactBySms">Invite contact by SMS</string>
	<string name="LegalName">Official Company Name</string>
	<string name="Attention">Att. Name / Dept.</string>
	<string name="ProfileMenu">Menu</string>
	<string name="PleaseRate">Rate us :-)</string>
	<string name="ProfileSettings">Profile &amp; Settings</string>
	<string name="RemoteActivationDesc1">Activate tracking remotely from PC</string>
	<string name="RemoteActivationDesc2">In case of losing your device, activate tracking mode from any PC.</string>
	<string name="RemoteActivationDesc3">1. www.hellotracks.com</string>
	<string name="RemoteActivationDesc4">2. Sign in with your Username: %1$s  Password %2$s</string>
	<string name="RemoteActivationDesc5">3. In Profile - choose Remote Activation</string>
</resources>