<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="match_parent"
    android:background="#99000000"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/RemoteActivationDesc1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:fontFamily="@string/font_regular"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/RemoteActivationDesc2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" 
        android:fontFamily="@string/font_regular" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/RemoteActivationDesc3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" 
        android:fontFamily="@string/font_regular" />

    <TextView
        android:id="@+id/textSignInWithUsernameAndPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/RemoteActivationDesc4"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:fontFamily="@string/font_regular"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/RemoteActivationDesc5"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:fontFamily="@string/font_regular"  />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/custom_button_block_one"
        android:onClick="onOK"
        android:text="@string/OK"
        android:textColor="@color/white"
        android:fontFamily="@string/font_regular"  />

</LinearLayout>