<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/frameLayout1" android:layout_width="match_parent"
	android:background="@color/transparent" android:layout_height="match_parent">
	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/gradient"
		android:orientation="vertical" android:layout_gravity="center">
		<FrameLayout android:layout_width="fill_parent" android:id="@+id/logoFrame" android:layout_height="50dip">
			<TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/name" android:textSize="@dimen/title" android:text="@string/ProfileMenu"
				android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"></TextView>
			<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/button_back" android:onClick="onBack"
				android:src="@drawable/btn_delete" android:layout_gravity="right|center_vertical" android:background="@drawable/custom_button_trans"></ImageButton>
		</FrameLayout>
		<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/scrollView1">
			<LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="fill_parent">
				<Button android:text="@string/InviteContactBySms" android:id="@+id/inviteContactBySms" android:gravity="left|center_vertical"
					android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginLeft="@dimen/sidepadding" android:layout_marginRight="@dimen/sidepadding"
					android:background="@drawable/custom_button_insta_top" android:layout_marginTop="@dimen/bigspace" android:layout_marginBottom="@dimen/spacing"
					android:onClick="onInviteContactBySms" android:visibility="gone"></Button>
				<Button android:text="@string/InviteContactByEmail" android:id="@+id/inviteContactByEmail" android:gravity="left|center_vertical"
					android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginLeft="@dimen/sidepadding" android:layout_marginRight="@dimen/sidepadding"
					android:background="@drawable/custom_button_insta_bottom" android:layout_marginTop="0dip" android:layout_marginBottom="@dimen/spacing"
					android:onClick="onInviteContactByEmail" android:visibility="gone"></Button>
				<Button android:text="@string/Messages" android:id="@+id/messages" android:layout_height="wrap_content" android:layout_width="match_parent"
					android:layout_marginLeft="@dimen/sidepadding" android:layout_marginRight="@dimen/sidepadding" android:background="@drawable/custom_button_insta_top"
					android:layout_marginTop="@dimen/bigspace" android:layout_marginBottom="@dimen/spacing" android:onClick="onMessages" android:drawableLeft="@drawable/tab_jobs_gray"
					android:gravity="center_horizontal|center_vertical"></Button>
				<Button android:text="@string/Activities" android:id="@+id/activities" android:gravity="center_horizontal|center_vertical"
					android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginLeft="@dimen/sidepadding" android:layout_marginRight="@dimen/sidepadding"
					android:background="@drawable/custom_button_insta_none" android:layout_marginTop="0dip" android:layout_marginBottom="@dimen/spacing"
					android:onClick="onActivities" android:drawableLeft="@drawable/tab_activities_gray"></Button>
				<Button android:text="@string/ProfileSettings" android:id="@+id/settings" android:gravity="center_horizontal|center_vertical"
					android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginLeft="@dimen/sidepadding" android:layout_marginRight="@dimen/sidepadding"
					android:background="@drawable/custom_button_insta_bottom" android:layout_marginTop="0dip" android:layout_marginBottom="@dimen/spacing"
					android:onClick="onSettings" android:drawableLeft="@drawable/tab_profile_gray"></Button>
				<Button android:text="@string/HelpAndFAQ" android:id="@+id/help" android:gravity="left|center_vertical" android:layout_height="wrap_content"
					android:layout_width="match_parent" android:layout_marginLeft="@dimen/sidepadding" android:layout_marginRight="@dimen/sidepadding"
					android:background="@drawable/custom_button_insta_top" android:layout_marginTop="@dimen/bigspace" android:layout_marginBottom="@dimen/spacing"
					android:onClick="onHelp"></Button>
				<Button android:text="@string/QuestionOrFeedback" android:id="@+id/contact" android:gravity="left|center_vertical" android:layout_height="wrap_content"
					android:layout_width="match_parent" android:layout_marginLeft="@dimen/sidepadding" android:layout_marginRight="@dimen/sidepadding"
					android:background="@drawable/custom_button_insta_none" android:layout_marginTop="0dip" android:layout_marginBottom="@dimen/spacing"
					android:onClick="onContact" android:visibility="gone"></Button>
				<Button android:text="@string/PleaseRate" android:id="@+id/rateButton" android:gravity="left|center_vertical" android:layout_height="wrap_content"
					android:layout_width="match_parent" android:layout_marginLeft="@dimen/sidepadding" android:layout_marginRight="@dimen/sidepadding"
					android:background="@drawable/custom_button_insta_none" android:layout_marginTop="0dip" android:layout_marginBottom="@dimen/spacing"
					android:onClick="onRate"></Button>
				<Button android:text="@string/BusinessUse" android:id="@+id/business" android:gravity="left|center_vertical" android:layout_height="wrap_content"
					android:layout_width="match_parent" android:layout_marginLeft="@dimen/sidepadding" android:layout_marginRight="@dimen/sidepadding"
					android:background="@drawable/custom_button_insta_bottom" android:layout_marginTop="0dip" android:layout_marginBottom="@dimen/bigspace"
					android:onClick="onBusiness"></Button>
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</FrameLayout>